--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,11 +18,11 @@
   <thead>
     <tr>
       <th>
-        <%= link_to 'Movie Title', movies_path({sort_by: 'title'}), id: 'title_header', class: ('bg-warning hilite' if @sort_by == 'title') %>
+        <%= link_to 'Movie Title', movies_path({sort_by: 'title', ratings: @ratings_to_show}), id: 'title_header', class: ('bg-warning hilite' if @sort_by == 'title') %>
       </th>
       <th>Rating</th>
       <th>
-        <%= link_to 'Release Date', movies_path({sort_by: 'release_date'}), id: 'release_date_header', class: ('p-3 mb-2 bg-warning hilite' if @sort_by == 'release_date') %>
+        <%= link_to 'Release Date', movies_path({sort_by: 'release_date', ratings: @ratings_to_show}), id: 'release_date_header', class: ('p-3 mb-2 bg-warning hilite' if @sort_by == 'release_date') %>
       </th>
       <th>More Info</th>
     </tr>
